--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp+xml" href="./public/newlogo-removebg-preview.png" />
+    <link rel="icon" type="image/webp+xml" href="./public/login1.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Car Transporter</title>
-  </head>
+    <title>OurServices-AR-AUTOTRANSPORT</title>
+  </head> 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
